--- a/resource/GameView.fxml
+++ b/resource/GameView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -20,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="fx_gameScene" fx:controller="porprezhas.view.fx.gameScene.controller.GameViewController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="fx_gameScene" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.gameScene.controller.GameViewController">
     <children>
         <SplitPane dividerPositions="0.8125" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
@@ -47,15 +46,15 @@
                                               </columnConstraints>
                                               <rowConstraints>
                                     <RowConstraints maxHeight="30.0" minHeight="0.0" percentHeight="0.2" prefHeight="0.0" vgrow="SOMETIMES" />
-                                                  <RowConstraints minHeight="32.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                                                  <RowConstraints minHeight="200.0" prefHeight="200.0" vgrow="SOMETIMES" />
+                                                  <RowConstraints maxHeight="100.0" minHeight="42.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                                                  <RowConstraints minHeight="200.0" prefHeight="300.0" vgrow="SOMETIMES" />
                                                   <RowConstraints minHeight="260.0" prefHeight="280.0" vgrow="SOMETIMES" />
                                     <RowConstraints maxHeight="50.0" minHeight="0.0" percentHeight="1.0" prefHeight="0.0" vgrow="SOMETIMES" />
                                               </rowConstraints>
                                               <children>
                                                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.rowIndex="1" GridPane.rowSpan="2">
                                                       <children>
-                                                          <GridPane fx:id="fx_roundTrackDiceTable" alignment="TOP_CENTER" minHeight="60.0" minWidth="320.0" prefHeight="120.0" prefWidth="320.0" HBox.hgrow="SOMETIMES">
+                                                          <GridPane fx:id="fx_roundTrackDiceTable" alignment="TOP_CENTER" minHeight="50.0" minWidth="320.0" prefHeight="120.0" prefWidth="320.0" HBox.hgrow="SOMETIMES">
                                                               <columnConstraints>
                                                                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -152,30 +151,19 @@
                                                           </VBox>
                                                       </children>
                                                   </HBox>
-                                                  <HBox fx:id="fx_draftPoolParent" alignment="CENTER" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="2" GridPane.vgrow="SOMETIMES">
+                                    <HBox GridPane.hgrow="SOMETIMES" GridPane.rowIndex="2" GridPane.vgrow="SOMETIMES">
                                        <GridPane.margin>
-                                          <Insets right="50.0" />
+                                          <Insets right="20.0" />
                                        </GridPane.margin>
-                                                  </HBox>
+                                       <children>
+                                                        <HBox fx:id="fx_draftPoolParent" alignment="CENTER" minHeight="200.0" minWidth="200.0" prefHeight="400.0" prefWidth="400.0" />
+                                       </children>
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </HBox>
                                                   <VBox minHeight="240.0" minWidth="340.0" prefHeight="260.0" prefWidth="340.0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="3" GridPane.vgrow="SOMETIMES">
                                                       <children>
-                                                          <HBox alignment="BASELINE_LEFT" minHeight="48.0" minWidth="240.0" prefHeight="48.0" prefWidth="340.0" spacing="20.0">
-                                                              <padding>
-                                                                  <Insets bottom="6.0" left="20.0" />
-                                                              </padding>
-                                                              <VBox.margin>
-                                                                  <Insets />
-                                                              </VBox.margin>
-                                             <children>
-                                                <ButtonBar prefHeight="40.0" prefWidth="200.0">
-                                                  <buttons>
-                                                    <Button mnemonicParsing="false" text="Button" />
-                                                      <Button layoutX="132.0" layoutY="11.0" mnemonicParsing="false" text="Button" />
-                                                      <Button layoutX="44.0" layoutY="11.0" mnemonicParsing="false" text="Button" />
-                                                  </buttons>
-                                                </ButtonBar>
-                                             </children>
-                                                          </HBox>
                                                           <HBox fx:id="fx_playerPane" minHeight="200.0" minWidth="240.0" prefHeight="200.0" prefWidth="340.0" VBox.vgrow="SOMETIMES">
                                                               <children>
                                                                   <VBox prefHeight="192.0" prefWidth="240.0" HBox.hgrow="SOMETIMES">
@@ -277,6 +265,9 @@
                                                               </padding>
                                                           </HBox>
                                                       </children>
+                                       <padding>
+                                          <Insets top="30.0" />
+                                       </padding>
                                                   </VBox>
                                               </children>
                                           </GridPane>
