--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -112,7 +112,7 @@
             </Text>
             <AnchorPane fx:id="singlePlayerScene" prefHeight="600.0" prefWidth="606.0">
                <children>
-                  <Button fx:id="singlePlayerViewButton" layoutX="243.0" layoutY="376.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="165.0" style="-fx-background-color: #FFF1C6;" text="SinglePlayer Mode" textFill="#390f01">
+                  <Button fx:id="singlePlayerViewButton" layoutX="243.0" layoutY="376.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="165.0" style="-fx-background-color: #FFF1C6;" text="SinglePlayer Mode" textFill="#390f01" AnchorPane.bottomAnchor="120.0">
                      <effect>
                         <DropShadow />
                      </effect>
@@ -120,6 +120,18 @@
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
+                  <AnchorPane fx:id="returnGameScene" layoutX="6.0" layoutY="20.0" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="returnViewButton" layoutX="214.0" layoutY="339.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="172.0" style="-fx-background-color: #FFF1C6;" text="Return to Game" textFill="#390f01">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <font>
+                              <Font name="Book Antiqua" size="16.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </children>
