--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -110,6 +110,18 @@
                   <Insets bottom="96.0" />
                </StackPane.margin>
             </Text>
+            <AnchorPane fx:id="returnGameScene" prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="returnViewButton" layoutX="214.0" layoutY="339.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="172.0" style="-fx-background-color: #FFF1C6;" text="Return to Game" textFill="#390f01" AnchorPane.bottomAnchor="205.0">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Book Antiqua" size="16.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
             <AnchorPane fx:id="singlePlayerScene" prefHeight="600.0" prefWidth="606.0">
                <children>
                   <Button fx:id="singlePlayerViewButton" layoutX="243.0" layoutY="376.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="165.0" style="-fx-background-color: #FFF1C6;" text="SinglePlayer Mode" textFill="#390f01" AnchorPane.bottomAnchor="120.0">
@@ -120,18 +132,6 @@
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
-                  <AnchorPane fx:id="returnGameScene" layoutX="6.0" layoutY="20.0" prefHeight="200.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="returnViewButton" layoutX="214.0" layoutY="339.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="172.0" style="-fx-background-color: #FFF1C6;" text="Return to Game" textFill="#390f01">
-                           <effect>
-                              <DropShadow />
-                           </effect>
-                           <font>
-                              <Font name="Book Antiqua" size="16.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </AnchorPane>
                </children>
             </AnchorPane>
          </children>
