--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
@@ -14,9 +21,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <?import javafx.scene.control.Label?>
-<AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.loginScene.LoginViewController">
+
+<AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.loginScene.LoginViewController">
    <children>
       <StackPane fx:id="backgroundPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -85,6 +92,14 @@
                         <Font name="Book Antiqua" size="18.0" />
                      </font>
                   </Button>
+                  <Button fx:id="exitDifficultyViewButton" cache="true" mnemonicParsing="false" onAction="#onExitDifficultyViewButton" prefHeight="39.0" prefWidth="74.0" style="-fx-background-color: #451403;" text="Exit" textFill="#fff9f7">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Book Antiqua" size="18.0" />
+                     </font>
+                  </Button>
                </children>
                <padding>
                   <Insets top="100.0" />
@@ -137,6 +152,14 @@
                         <Insets top="20.0" />
                      </padding>
                   </HBox>
+                  <Button fx:id="exitLoginViewButton" cache="true" mnemonicParsing="false" onAction="#onExitLoginViewButton" prefHeight="24.0" prefWidth="69.0" style="-fx-background-color: #451403;" text="Exit" textFill="#fffcfb">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Book Antiqua" size="18.0" />
+                     </font>
+                  </Button>
                </children>
                <padding>
                   <Insets top="100.0" />
@@ -167,6 +190,14 @@
                      <effect>
                         <DropShadow />
                      </effect>
+                  </Button>
+                  <Button fx:id="exitJoinViewButton" layoutX="265.0" layoutY="474.0" mnemonicParsing="false" onAction="#onExitJoinViewButton" prefHeight="20.0" prefWidth="70.0" style="-fx-background-color: #451403;" text="Exit" textFill="#fffaf8">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Book Antiqua" size="18.0" />
+                     </font>
                   </Button>
                </children>
             </AnchorPane>
