added result scene references to GuiViewUpdateHandler

--- a/resource/ResultsView.fxml
+++ b/resource/ResultsView.fxml
@@ -44,7 +44,7 @@
             <MotionBlur radius="2.0" />
          </effect>
       </Label>
-      <Pane layoutX="124.0" layoutY="200.0" prefHeight="251.0" prefWidth="345.0">
+      <Pane fx:id="winnerPane" layoutX="124.0" layoutY="200.0" prefHeight="251.0" prefWidth="345.0">
          <children>
             <ImageView fitHeight="249.0" fitWidth="348.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -54,32 +54,27 @@
                   <ColorAdjust brightness="0.51" contrast="0.6" saturation="-0.21" />
                </effect>
             </ImageView>
-            <ImageView fitHeight="118.0" fitWidth="101.0" layoutX="91.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="118.0" fitWidth="101.0" layoutX="121.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@background/da985521b2ffcbb95a2ca9d3c9f39afa-1st-place-laurel-badge-by-vexels.png" />
                </image>
             </ImageView>
-            <Label blendMode="SRC_ATOP" layoutX="88.0" layoutY="126.0" text="Player 1">
+            <Label fx:id="winnerNameLabel" blendMode="SRC_ATOP" layoutX="88.0" layoutY="126.0" text="Player 1">
                <font>
                   <Font name="Castellar" size="34.0" />
                </font>
             </Label>
-            <Label blendMode="SRC_ATOP" layoutX="87.0" layoutY="173.0" text="punteggio 1">
+            <Label fx:id="winnerPointsLabel" blendMode="SRC_ATOP" layoutX="87.0" layoutY="173.0" text="punteggio 1">
                <font>
                   <Font name="Bookshelf Symbol 7" size="32.0" />
                </font>
             </Label>
-            <ImageView fitHeight="58.0" fitWidth="72.0" layoutX="197.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@head/64x64x64/head_1.png" />
-               </image>
-            </ImageView>
          </children>
          <effect>
             <DropShadow />
          </effect>
       </Pane>
-      <Pane layoutX="27.0" layoutY="480.0" prefHeight="110.0" prefWidth="151.0">
+      <Pane fx:id="noWinner1Pane" layoutX="27.0" layoutY="480.0" prefHeight="110.0" prefWidth="151.0">
          <children>
             <ImageView fitHeight="110.0" fitWidth="151.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -89,17 +84,12 @@
                   <ColorAdjust brightness="0.16" contrast="0.19" saturation="0.07" />
                </effect>
             </ImageView>
-            <ImageView fitHeight="58.0" fitWidth="72.0" layoutX="85.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@head/64x64x64/head_5.png" />
-               </image>
-            </ImageView>
-            <Label blendMode="SRC_ATOP" layoutX="16.0" layoutY="67.0" text="punteggio 2">
+            <Label fx:id="noWinner1NameLabel" blendMode="SRC_ATOP" layoutX="41.0" layoutY="27.0" text="Player 2">
                <font>
                   <Font name="Bookshelf Symbol 7" size="18.0" />
                </font>
             </Label>
-            <Label blendMode="SRC_ATOP" layoutX="14.0" layoutY="19.0" text="Player 2">
+            <Label fx:id="noWinner1PointsLabel" blendMode="SRC_ATOP" layoutX="16.0" layoutY="67.0" text="punteggio 2">
                <font>
                   <Font name="Bookshelf Symbol 7" size="18.0" />
                </font>
@@ -109,7 +99,7 @@
             <DropShadow />
          </effect>
       </Pane>
-      <Pane layoutX="213.0" layoutY="480.0" prefHeight="110.0" prefWidth="151.0" style="-fx-background-color: #FFFFFF;">
+      <Pane fx:id="noWinner2Pane" layoutX="213.0" layoutY="480.0" prefHeight="110.0" prefWidth="151.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <ImageView fitHeight="116.0" fitWidth="151.0" pickOnBounds="true" preserveRatio="true">
                <effect>
@@ -119,27 +109,22 @@
                   <Image url="@background/Parchment.00.jpg" />
                </image>
             </ImageView>
-            <Label blendMode="SRC_ATOP" layoutX="14.0" layoutY="17.0" text="Player 3">
+            <Label fx:id="noWinner2NameLabel" blendMode="SRC_ATOP" layoutX="43.0" layoutY="27.0" text="Player 3">
                <font>
                   <Font name="Bookshelf Symbol 7" size="18.0" />
                </font>
             </Label>
-            <Label blendMode="SRC_ATOP" layoutX="28.0" layoutY="65.0" text="punteggio 3">
+            <Label fx:id="noWinner2PointsLabel" blendMode="SRC_ATOP" layoutX="28.0" layoutY="65.0" text="punteggio 3">
                <font>
                   <Font name="Bookshelf Symbol 7" size="18.0" />
                </font>
             </Label>
-            <ImageView fitHeight="58.0" fitWidth="72.0" layoutX="85.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@head/64x64x64/head_8.png" />
-               </image>
-            </ImageView>
          </children>
          <effect>
             <DropShadow />
          </effect>
       </Pane>
-      <Pane layoutX="396.0" layoutY="480.0" prefHeight="110.0" prefWidth="146.0" style="-fx-background-color: #FFFFFF;">
+      <Pane fx:id="noWinner3Pane" layoutX="396.0" layoutY="480.0" prefHeight="110.0" prefWidth="146.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <ImageView fitHeight="110.0" fitWidth="151.0" pickOnBounds="true" preserveRatio="true">
                <effect>
@@ -149,17 +134,12 @@
                   <Image url="@background/Parchment.00.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="58.0" fitWidth="72.0" layoutX="85.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@head/64x64x64/head_11.png" />
-               </image>
-            </ImageView>
-            <Label blendMode="SRC_ATOP" layoutX="26.0" layoutY="64.0" text="punteggio 4">
+            <Label fx:id="noWinner3NameLabel" blendMode="SRC_ATOP" layoutX="41.0" layoutY="26.0" text="Player 4">
                <font>
                   <Font name="Bookshelf Symbol 7" size="18.0" />
                </font>
             </Label>
-            <Label blendMode="SRC_ATOP" layoutX="14.0" layoutY="17.0" text="Player 4">
+            <Label fx:id="noWinner3PointsLabel" blendMode="SRC_ATOP" layoutX="26.0" layoutY="64.0" text="punteggio 4">
                <font>
                   <Font name="Bookshelf Symbol 7" size="18.0" />
                </font>
